Adjustment to the width of the text input Search Bar paramter, it had an issue where it was too wide in mobile view

--- a/src/Providers-page/SearchBar.css
+++ b/src/Providers-page/SearchBar.css
@@ -21,7 +21,6 @@
 }
 
 
-
 .provider-map-searchbar input[type="text"] {
     color: #ffffff;
     text-align: center;
@@ -65,7 +64,6 @@
     height: 38px;
     color: #ffffff;
     transition: background-color 0.3s ease;
-
 }
 
 /* Common styles for inputs and selects */
@@ -151,4 +149,10 @@
     color: #ffffff;
     pointer-events: none;
     font-size: 0.8rem;
+}
+
+@media (max-width: 578px) {
+    .provider-map-searchbar input[type="text"] {
+        width: 97%;
+    }
 }
